--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.1",
+    "@prismicio/next": "^0.1.2",
+    "apollo-link-prismic": "^1.1.1",
+    "date-fns": "^2.28.0",
+    "graphql": "^16.4.0",
     "next": "12.1.5",
+    "prismic-reactjs": "^1.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
